<?xml version="1.0"?>
<package>
  <name>chilitags_catkin</name>
  <version>0.0.1</version>
  <description>Catkin wrapper for the chilitags library</description>

  <maintainer email="nicolov@users.noreply.github.com">nicolov</maintainer>

  <license>See upstream</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <export></export>
</package>
